[package]
name = "cas-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.40"
prost = "0.9.0"
tokio = {version = "1.4.0", features = ["full"]}
tonic = "0.6.2"

[build-dependencies]
tonic-build = "0.6.2"
